<resources>
    <string name="app_name">RoadCapture</string>
    <string name="app">App</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="complete">Complete</string>
    <string name="check">Check</string>
    <string name="delete">Delete</string>
    <string name="later">I\'ll do it later</string>
    <string name="next_step">Next</string>
    <string name="none">None</string>
    <string name="reconsider">I\'ll reconsider</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="submit">Submit</string>
    <string name="try_again">Please try again</string>
    <string name="try_again_later">Please try again later</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="click_here">here</string>
    <string name="preparing">Preparing</string>
    <string name="recently_updated">Recently Updated</string>
    <string name="home_tab">Home</string>
    <string name="album_tab">Album</string>
    <string name="memory_tab">Memory</string>
    <string name="scrap_tab">Scrap</string>
    <string name="create_album">Create Album</string>
    <string name="my_album">My Album</string>
    <string name="album_in_progress">You have an album in progress</string>
    <string name="album_share">Share Album</string>
    <string name="create_share_link">Create Share Link</string>
    <string name="delete_album">Delete Album</string>
    <string name="delete_confirmation_text">Please enter \'DELETE\' if you want to delete</string>
    <string name="album_deleted">Album deleted</string>
    <string name="view_album">View Album</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="set_as_thumbnail">Set as Thumbnail</string>
    <string name="album_scrap_count">Album has been scraped %1$s times</string>
    <string name="continue_writing">Continue Writing</string>
    <string name="enter_title">Please enter a title</string>
    <string name="visibility_setting">Visibility</string>
    <string name="switch_to_private">Switch to Private</string>
    <string name="switch_to_public">Switch to Public</string>
    <string name="scrap_status">Scraped</string>
    <string name="view_count">%1$s views</string>
    <string name="item_count">%1$s</string>
    <string name="visibility_public">Public</string>
    <string name="visibility_private">Private</string>
    <string name="album_visibility_change_success">Album successfully switched to %1$s</string>
    <string name="album_switched_private">This album has been switched to private</string>
    <string name="album_delete_success">Album successfully deleted</string>
    <string name="album_create_success">Album successfully created</string>
    <string name="share_link_create_success">Share link successfully created</string>
    <string name="album_not_exist">This album doesn\'t exist</string>
    <string name="no_album">No albums exist...</string>
    <string name="no_album_exists">No albums exist</string>
    <string name="create_first_album">Go on a trip and create your first album!</string>
    <string name="no_scraped_albums">No scraped albums</string>
    <string name="scrap_encouragement">Try scraping albums you like!</string>
    <string name="create_memory">Create Memory</string>
    <string name="memory_count">Memory %1$d / %2$d</string>
    <string name="memory_count_created">You\'ve created %1$d memories</string>
    <string name="memory_creation_time">Memory created at %1$s</string>
    <string name="memory_minimum_requirement">You need to create at least one memory to complete an album.</string>
    <string name="nearby_memories_count">There are %1$d memories nearby</string>
    <string name="nearby_only">Only Nearby</string>
    <string name="no_memories">No memories exist</string>
    <string name="no_memories_exist">No memories exist...</string>
    <string name="create_memory_prompt">Go on a trip and create memories!</string>
    <string name="multiple_memories_nearby">Multiple memories exist nearby\nPlease select the range you want to check</string>
    <string name="select_range">Select Range</string>
    <string name="take_photo_guide">You can create memories by taking photos.</string>
    <string name="traveling">Traveling</string>
    <string name="destination">Destination</string>
    <string name="start_journey">Start Journey</string>
    <string name="end_travel">End Travel</string>
    <string name="still_traveling">Still traveling</string>
    <string name="during_travel">During travel</string>
    <string name="when_travel_ends">When travel ends</string>
    <string name="travel_capture_guide">Capture beautiful memories during your trips\nand create albums!</string>
    <string name="travel_continuation_notice">Your trip continues even if you close the app.\nHowever, if your trip exceeds one month, %1$s</string>
    <string name="travel_continuation_notice_full">Your trip continues even if you close the app.\nHowever, if your trip exceeds one month, you cannot create an album.</string>
    <string name="travel_completion_guide">If you\'ve finished your trip, please move to the next screen\nto complete your album</string>
    <string name="location_tracking">Location Tracking</string>
    <string name="location_tracking_active">Tracking Location</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="travel_route_recording">Recording your travel route</string>
    <string name="background_location_tracking">Tracking location in the background</string>
    <string name="location_loading_error">An error occurred\nwhile loading location information</string>
    <string name="loading_location">Loading location information</string>
    <string name="current_location_unavailable">Current location unavailable</string>
    <string name="copy_address">Copy Address</string>
    <string name="gps_signal_weak">GPS signal is weak, so location tracking is paused for now</string>
    <string name="uploading_image">Uploading image</string>
    <string name="uploading_thumbnail">Uploading thumbnail</string>
    <string name="saving_album">Saving album</string>
    <string name="deleting_album">Deleting album\nThis may take some time</string>
    <string name="changing_album_visibility">Changing album to %1$s\nThis may take some time</string>
    <string name="creating_share_link">Creating share link\nThis may take some time</string>
    <string name="processing_image">Processing image</string>
    <string name="reviewing_image">Reviewing image</string>
    <string name="stay_until_completion">Please stay here\nuntil the process completes</string>
    <string name="profile_photo_change_success">Profile photo successfully changed</string>
    <string name="name_change_success">Name successfully changed</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="change_name">Change Name</string>
    <string name="enter_name">Please enter your name</string>
    <string name="name_change">Name Change</string>
    <string name="profile_photo_changing">Changing profile photo\nThis may take some time</string>
    <string name="name_changing">Changing name\nThis may take some time</string>
    <string name="profile_name_description">This name will be displayed while you\'re active in the app</string>
    <string name="select_basic_profile">Please select a basic profile</string>
    <string name="profile_setup_later">Additional profile settings can be set up later</string>
    <string name="account_management">Account Management</string>
    <string name="login_album_share_message">You need to log in to receive shared albums</string>
    <string name="account_mismatch">Account mismatch</string>
    <string name="logout">Logout</string>
    <string name="logout_action">Logout</string>
    <string name="withdrawal">Service Withdrawal</string>
    <string name="withdrawal_confirmation_text">Please enter \'ROADCAPTURE\' if you want to withdraw</string>
    <string name="withdraw">Withdraw</string>
    <string name="service_withdrawal">Withdraw from Service</string>
    <string name="withdrawal_complete">Service withdrawal completed</string>
    <string name="logout_confirmation">Albums in progress will be %1$s\nAre you sure you want to log out?</string>
    <string name="logout_confirmation_full">Albums in progress will be automatically deleted\nAre you sure you want to log out?</string>
    <string name="withdrawal_confirmation">%1$s for the current account\nAre you sure you want to withdraw?</string>
    <string name="withdrawal_confirmation_full">All data for the current account will be deleted\nAre you sure you want to withdraw?</string>
    <string name="delete_album_confirmation">If you delete this album, you %1$s the memories\nAre you sure you want to delete?</string>
    <string name="delete_album_confirmation_full">If you delete this album, you cannot recover the memories\nAre you sure you want to delete?</string>
    <string name="auto_deleted">automatically deleted</string>
    <string name="all_data_deleted">all data will be deleted</string>
    <string name="cannot_recover">cannot recover</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="kakao">KakaoTalk</string>
    <string name="sign_in_google">Continue with Google</string>
    <string name="sign_in_facebook">Continue with Facebook</string>
    <string name="sign_in_kakao">Continue with KakaoTalk</string>
    <string name="quick_start">Quick Start</string>
    <string name="get_started">Get Started</string>
    <string name="service_registration">Service Registration</string>
    <string name="user_not_exist">User doesn\'t exist</string>
    <string name="user_not_found">User not found</string>
    <string name="subscription_notification">Subscription Notification</string>
    <string name="premium_plan_active">Premium Plan Active</string>
    <string name="premium_subscription_active">Premium plan is active</string>
    <string name="subscription_expiring">Subscription Expiring</string>
    <string name="subscription_expiry_notice">Your subscription expires in %1$d days. Please renew to continue using the service.</string>
    <string name="subscription_price">USD %1$s / month</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_premium">Subscribe to Premium</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="subscription_complete">Subscription Complete</string>
    <string name="subscription_complete_congrats">Congratulations! Your subscription is complete\nEnjoy premium benefits now</string>
    <string name="premium_label">Premium</string>
    <string name="subscription_benefits">Subscription Benefits</string>
    <string name="subscribe_benefits_prompt">Subscribe and enjoy more benefits!</string>
    <string name="subscribe_benefit_prompt">Subscribe and enjoy\nmore benefits!</string>
    <string name="album_link_creation">Album Link (Web Page) Creation</string>
    <string name="link_sharing_benefit">You can share your albums externally using links</string>
    <string name="ad_removal">Ad Removal</string>
    <string name="daily_memory_limit">%1$s memories daily</string>
    <string name="daily_memory_limit_thirty">30 memories daily</string>
    <string name="daily_limit">up to %1$d memories daily</string>
    <string name="daily_memory_limit_notice">You can create memories up to %1$s.</string>
    <string name="input_hint_text">Enter here</string>
    <string name="locked_by_admin">Locked by admin</string>
    <string name="album_visibility_restriction">This album can\'t be made public \nfor the following reason</string>
    <string name="reason">Reason</string>
</resources>