<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:id="@+id/ll_b_sheet_trip_stop_before_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
                  app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.cardview.widget.CardView android:layout_width="48dp"
                                           android:layout_height="4dp"
                                           android:id="@+id/card_b_sheet_trip_stop_before_handle"
                                           app:cardElevation="0dp"
                                           app:cardCornerRadius="10dp"
                                           app:cardBackgroundColor="@color/fill_neutral"
                                           android:layout_marginTop="16dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="20dp"
                  android:textAppearance="@style/Title_24"
                  android:textColor="@color/label_normal"
                  android:textAlignment="center"
                  android:text="@string/delete_album"
                  android:layout_marginTop="20dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="20dp"
                  android:id="@+id/txt_b_sheet_trip_stop_before_description"
                  android:textAppearance="@style/Body_12_M"
                  android:textColor="@color/label_neutral"
                  android:textAlignment="center"
                  android:text="@string/delete_album_confirmation_full"
                  android:layout_marginTop="4dp"/>

        <ImageView android:layout_width="168dp"
                   android:layout_height="168dp"
                   android:src="@drawable/check"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_b_sheet_trip_stop_before_negative"
                style="@style/Button"
                android:textAppearance="@style/Body_16_SB"
                android:textColor="@color/label_normal"
                android:text="@string/reconsider"
                android:backgroundTint="@color/fill_alternative"
                app:cornerRadius="12dp"
                android:padding="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="20dp"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_b_sheet_trip_stop_before_positive"
                style="@style/Button"
                android:textAppearance="@style/Body_16_SB"
                android:textColor="@color/background_normal"
                android:text="@string/delete"
                android:backgroundTint="@color/warning"
                app:cornerRadius="12dp"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"/>

    </LinearLayout>
</layout>
