<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.tenacy.roadcapture.ui.ViewScope"/>
    </data>

    <LinearLayout android:id="@+id/ll_b_sheet_subscribe_after_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingHorizontal="20dp"
                  android:paddingBottom="20dp"
                  app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.cardview.widget.CardView android:layout_width="48dp"
                                           android:layout_height="4dp"
                                           android:id="@+id/card_b_sheet_subscribe_after_handle"
                                           app:cardElevation="0dp"
                                           app:cardCornerRadius="10dp"
                                           app:cardBackgroundColor="@color/fill_neutral"
                                           android:layout_gravity="center"
                                           android:layout_marginTop="16dp"/>

        <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                               android:layout_height="0dp"
                                               android:layout_weight="1"
                                               android:id="@+id/ns_b_sheet_subscribe_after"
                                               android:layout_marginTop="8dp"
                                               android:paddingBottom="24dp"
                                               android:clipToPadding="false">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:gravity="center">

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textAppearance="@style/Title_24"
                          android:textColor="@color/label_normal"
                          android:textAlignment="center"
                          android:text="@string/subscription_complete"
                          android:layout_marginTop="20dp"/>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textAppearance="@style/Body_12_M"
                          android:textColor="@color/label_neutral"
                          android:textAlignment="center"
                          android:text="@string/subscription_complete_congrats"
                          android:layout_marginTop="4dp"/>

                <ImageView android:layout_width="220dp"
                           android:layout_height="220dp"
                           android:src="@drawable/congratulation"
                           android:scaleType="centerCrop"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:layout_marginTop="12dp">

                    <View android:layout_width="5dp"
                          android:layout_height="5dp"
                          android:layout_marginTop="8dp"
                          android:background="@drawable/circle"/>

                    <TextView android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1"
                              android:textAppearance="@style/Body_15_M"
                              android:textColor="@color/label_normal"
                              android:text="@string/daily_memory_limit_thirty"
                              android:layout_marginStart="8dp"/>

                </LinearLayout>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:layout_marginTop="12dp">

                    <View android:layout_width="5dp"
                          android:layout_height="5dp"
                          android:layout_marginTop="8dp"
                          android:background="@drawable/circle"/>

                    <LinearLayout android:layout_width="0dp"
                                  android:layout_height="wrap_content"
                                  android:layout_weight="1"
                                  android:orientation="vertical">

                        <TextView android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:textAppearance="@style/Body_15_M"
                                  android:textColor="@color/label_normal"
                                  android:text="@string/album_link_creation"
                                  android:layout_marginStart="8dp"/>

                        <TextView android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:textAppearance="@style/Body_12_M"
                                  android:textColor="@color/label_neutral"
                                  android:text="@string/link_sharing_benefit"
                                  android:layout_marginStart="8dp"/>


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:layout_marginTop="12dp">

                    <View android:layout_width="5dp"
                          android:layout_height="5dp"
                          android:layout_marginTop="8dp"
                          android:background="@drawable/circle"/>

                    <TextView android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:layout_weight="1"
                              android:textAppearance="@style/Body_15_M"
                              android:textColor="@color/label_normal"
                              android:text="@string/ad_removal"
                              android:layout_marginStart="8dp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_b_sheet_subscribe_after_negative"
                style="@style/Button"
                android:textAppearance="@style/Body_16_SB"
                android:textColor="@color/label_normal"
                android:text="@string/close"
                android:backgroundTint="@color/fill_alternative"
                app:cornerRadius="12dp"
                android:padding="12dp"/>

    </LinearLayout>

</layout>
