<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable name="inputText" type="kotlinx.coroutines.flow.MutableStateFlow&lt;String&gt;"/>
    </data>

    <LinearLayout android:id="@+id/ll_b_sheet_album_delete_before_d2_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
                  app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.cardview.widget.CardView android:layout_width="48dp"
                                           android:layout_height="4dp"
                                           android:id="@+id/card_b_sheet_album_delete_before_d2_handle"
                                           app:cardElevation="0dp"
                                           app:cardCornerRadius="10dp"
                                           app:cardBackgroundColor="@color/fill_neutral"
                                           android:layout_marginTop="16dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="20dp"
                  android:textAppearance="@style/Title_24"
                  android:textColor="@color/label_normal"
                  android:textAlignment="center"
                  android:text="@string/delete_album"
                  android:layout_marginTop="20dp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="20dp"
                  android:id="@+id/txt_b_sheet_album_delete_before_d2_description"
                  android:textAppearance="@style/Body_12_M"
                  android:textColor="@color/label_neutral"
                  android:textAlignment="center"
                  android:text="@string/delete_confirmation_text"
                  android:layout_marginTop="4dp"/>

        <com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           app:cardBackgroundColor="@color/background_normal"
                                                           app:cardCornerRadius="12dp"
                                                           app:cardElevation="0dp"
                                                           app:strokeWidth="1dp"
                                                           app:strokeColor="@color/line_normal"
                                                           android:layout_marginTop="24dp"
                                                           android:layout_marginHorizontal="20dp">

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/et_b_sheet_album_delete_before_d2_input"
                      android:background="@null"
                      android:textCursorDrawable="@drawable/cursor"
                      android:importantForAutofill="no"
                      android:inputType="textCapCharacters"
                      android:imeOptions="actionDone"
                      android:textAppearance="@style/Body_14_M"
                      android:textColor="@color/label_normal"
                      android:textAlignment="center"
                      android:text="@={inputText}"
                      android:hint="@string/input_hint_text"
                      android:textColorHint="@color/fill_neutral"
                      android:padding="12dp"/>

        </com.google.android.material.card.MaterialCardView>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_b_sheet_album_delete_before_d2_negative"
                style="@style/Button"
                android:textAppearance="@style/Body_16_SB"
                android:textColor="@color/label_normal"
                android:text="@string/reconsider"
                android:backgroundTint="@color/fill_alternative"
                app:cornerRadius="12dp"
                android:padding="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="20dp"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_b_sheet_album_delete_before_d2_positive"
                style="@style/Button"
                android:enabled="false"
                android:textAppearance="@style/Body_16_SB"
                android:textColor="@color/negative_text"
                android:text="@string/delete"
                android:backgroundTint="@color/negative_background"
                app:cornerRadius="12dp"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"/>

    </LinearLayout>
</layout>
